[gd_scene load_steps=7 format=3 uid="uid://b61ebt7kmkbgu"]

[ext_resource type="Theme" uid="uid://dldyry0ytjvc4" path="res://themes/skate_button.tres" id="1_06t4h"]
[ext_resource type="Script" uid="uid://ddiv7fq0nl00w" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://i4uwjr7b42g5" path="res://assets/skamte.png" id="2_7vrkn"]
[ext_resource type="PackedScene" uid="uid://dx1yysfkocu4r" path="res://nodes/background.tscn" id="2_jix8l"]
[ext_resource type="PackedScene" uid="uid://dpvuqtirhlk7i" path="res://obstacles/flat_ground.tscn" id="3_glbon"]
[ext_resource type="FontFile" uid="uid://bwbmw7rvg8oeq" path="res://assets/fonts/m5x7.ttf" id="6_nlkkf"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_fu7sn")

[node name="TileMapLayer2" parent="." instance=ExtResource("2_jix8l")]
process_mode = 4

[node name="Node2D" parent="." instance=ExtResource("3_glbon")]
process_mode = 4
position = Vector2(0, 90)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 194.0
offset_top = 52.0
offset_right = 276.0
offset_bottom = 147.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_06t4h")
button_mask = 0
text = "Start Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_06t4h")
button_mask = 0
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_06t4h")
button_mask = 0
text = "Exit Game"

[node name="Logo2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.572549)
texture_filter = 5
position = Vector2(150, 29)
texture = ExtResource("2_7vrkn")

[node name="Logo" type="Sprite2D" parent="."]
texture_filter = 5
position = Vector2(148, 27)
texture = ExtResource("2_7vrkn")

[node name="HighScores" type="HBoxContainer" parent="."]
offset_left = 11.0
offset_top = 60.0
offset_right = 182.0
offset_bottom = 141.0
size_flags_horizontal = 3

[node name="HighScoreContainer" type="VBoxContainer" parent="HighScores"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HighScoreContainer2" type="VBoxContainer" parent="HighScores"]
layout_mode = 2

[node name="Credits" type="VBoxContainer" parent="."]
visible = false
offset_left = 12.0
offset_top = 53.0
offset_right = 184.0
offset_bottom = 154.0

[node name="Label" type="Label" parent="Credits"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_nlkkf")
theme_override_font_sizes/font_size = 23
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Credits"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_nlkkf")
theme_override_font_sizes/font_size = 23
text = "Programming: Aya"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Credits"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_nlkkf")
theme_override_font_sizes/font_size = 23
text = "Artwork: Aya, Kenney.nl"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Credits"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_nlkkf")
theme_override_font_sizes/font_size = 23
text = "Music / SFX: Aya"
horizontal_alignment = 1

[node name="backbutton" type="Button" parent="."]
visible = false
offset_left = 194.0
offset_top = 84.0
offset_right = 276.0
offset_bottom = 113.0
theme = ExtResource("1_06t4h")
text = "Back"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="backbutton" to="." method="_on_backbutton_pressed"]
